RESOLVED FIXED82488
REGRESSION (r109826): Can't type into Flash text fields
https://bugs.webkit.org/show_bug.cgi?id=82488
Summary REGRESSION (r109826): Can't type into Flash text fields
Anders Carlsson
Reported 2012-03-28 11:14:31 PDT
REGRESSION (r109826): Can't type into Flash text fields
Attachments
Patch (2.98 KB, patch)
2012-03-28 11:18 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2012-03-28 11:18:47 PDT
Anders Carlsson
Comment 2 2012-03-28 11:22:05 PDT
Note You need to log in before you can comment on or make changes to this bug.